[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scene/RetroExplosion.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Shadows/light.png" type="Texture" id=2]
[ext_resource path="res://Scene/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Script/HitBoxPlayer.gd" type="Script" id=4]
[ext_resource path="res://assets/Items/fire-2.png" type="Texture" id=5]
[ext_resource path="res://Script/Artifacts/Bullet_Player.gd" type="Script" id=6]
[ext_resource path="res://assets/Music & Sound/fire_1.ogg" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 9.25025

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.6, 0.6 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 15.1599, 15.4688, 16.3284, 15.2353 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.592278, 0.252692 ), Vector2( 0.844835, 0.283909 ), Vector2( 0.433365, 0.127836 ), Vector2( 3.71092, 0.596056 ), Vector2( 3.96347, 0.252692 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 15.1599

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.389423, 0.413462, 0.548077, 0.567308, 0.701923, 0.745192, 1 )
colors = PoolColorArray( 1, 0.917647, 0, 1, 1, 0.917647, 0, 1, 1, 0.635294, 0.054902, 1, 1, 0.635294, 0.054902, 1, 1, 0.215686, 0.133333, 1, 1, 0.215686, 0.133333, 1, 0.168627, 0.168627, 0.168627, 1, 0.168627, 0.168627, 0.168627, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
width = 40
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
width = 40
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=13]
resource_local_to_scene = true
lifetime_randomness = 0.46
trail_size_modifier = SubResource( 10 )
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 6 )
color_ramp = SubResource( 12 )
anim_speed = 1.0

[node name="Bullet_Player" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 2065
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 5 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.117848, 0.0758982 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fire"
anims/fire = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.7
color = Color( 1, 0.211765, 0, 1 )
energy = 0.8

[node name="HitBox" parent="." instance=ExtResource( 3 )]
collision_mask = 33280
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0.592278, 0.252692 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -0.296989, -0.0155487 )
scale = Vector2( 1.53454, 1.47329 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="RetroExplosion" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 0 )
emitting = true
amount = 50
lifetime = 0.6
one_shot = false
process_material = SubResource( 13 )
script = null

[node name="Timer" parent="RetroExplosion" index="1"]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_Bullet_Player_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="HitBox"]
[editable path="RetroExplosion"]
